# Conway

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
docker/: Dockerfile
src/conway/: __init__.py  __main__.py  cli.py
src/conway/grid/: cell.py  grid.py  structures.py
src/conway/transform/: array.py
tests/: __init__.py
tests/conway/: test_project_info.py  test_version.py
tests/conway/grid/: test_cell.py  test_grid.py
tests/conway/transform/: test_array.py
